@@ -22,7 +22,7 @@
 #include <cuda_runtime_api.h>
 
 /**
- * Entierly local tasks that should only be used to move data between a device and the main memory. Such
+ * Entirely local tasks that should only be used to move data between a device and the main memory. Such
  * tasks would be generated by the CUDA engine when a lack of data for future tasks is detected, in which
  * case the least recently used data owned by the device will be marked for transfer back to the main
  * memory. Upon succesful transfer the data will become shared, and future tasks would then be able to
@@ -165,6 +165,8 @@ static const symbol_t symb_CUDA_d2h_task_param = {
     .flags = 0x0
 };
 
+int32_t parsec_CUDA_d2h_max_flows = 0;
+
 static const parsec_task_class_t parsec_CUDA_d2h_task_class = {
     .name = "CUDA D2H data transfer",
     .task_class_id = 0,
@@ -218,7 +220,7 @@ parsec_gpu_create_W2R_task(gpu_device_t *gpu_device,
 
     /* Find a data copy that has no pending users on the GPU, and can be
      * safely moved back on the main memory */
-    while(nb_cleaned < MAX_PARAM_COUNT) {
+    while(nb_cleaned < parsec_CUDA_d2h_max_flows) {
         /* Break at the end of the list */
         if( item == &(gpu_device->gpu_mem_owned_lru.ghost_element) ) {
             break;
